--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-{}
+{
+  "name": "alefedo-website",
+  "version": "0.0.1",
+  "author": "Alexander Fedorov <alefedo6@gmail.com>",
+  "description": "A personal website.",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "build": "webpack"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "html-minimizer-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {}
+}
